--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,3 +152,53 @@ code {
 	margin-bottom: 10px;
 	background-color: #737373;
 }
+
+@keyframes scrolldown-anim {
+	0% {
+		opacity: 0;
+		height: 6px;
+	}
+	40% {
+		opacity: 1;
+		height: 10px;
+	}
+	80% {
+		transform: translateY(20px);
+		height: 10px;
+		opacity: 0;
+	}
+	100% {
+		height: 3px;
+		opacity: 0;
+	}
+}
+
+@keyframes pulse-odd {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 0.5;
+	}
+}
+
+@keyframes pulse-even {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 0.5;
+	}
+}
+
+.animate-scroll {
+	animation: scrolldown-anim 2s infinite;
+}
+
+.animate-pulse-odd {
+	animation: pulse-odd 500ms ease infinite alternate;
+}
+
+.animate-pulse-even {
+	animation: pulse-even 500ms ease infinite alternate 250ms;
+}
