--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@ html {
 	}
 
 	.dark {
-		--background: 212, 14%, 19%;
+		--background: 212 14% 19%;
 		--foreground: 210 40% 98%;
 		--card: 222.2 84% 4.9%;
 		--card-foreground: 210 40% 98%;
